real/infra/modules/site/instances.tf

data "aws_ami" "main" {
  owners = ["self"]
  filter {
    name   = "name"
    values = ["debian-stretch-base"]
  }
}

resource "aws_key_pair" "main" {
    key_name   = "${ var.vpc_name }-main"
    public_key = "${ var.public_key }"
}

resource "aws_security_group" "main" {
  name        = "${ var.vpc_name }-main"
  description = "Default rules for hosts in ${ var.vpc_name } VPC"
  vpc_id = "${ aws_vpc.main.id }"

  ingress {
    from_port   = 22
    to_port     = 22
    protocol = "tcp"
    security_groups = ["${ aws_security_group.gw.id }"]
  }

  # for icinga NRPE
  ingress {
    from_port   = 5666
    to_port     = 5666
    protocol = "tcp"
    security_groups = ["${ aws_security_group.monitoring.id }"]
  }

  egress {
    from_port       = 0
    to_port         = 0
    protocol        = "-1"
    cidr_blocks     = ["0.0.0.0/0"]
  }

  tags {
      Name = "${ var.vpc_name }-main"
  }
}
